<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.janilla</groupId>
	<artifactId>janilla-ide</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>
		<dependency>
			<groupId>com.janilla</groupId>
			<artifactId>janilla</artifactId>
			<version>4.0.0</version>
		</dependency>
	</dependencies>
	<properties>
		<maven.compiler.release>23</maven.compiler.release>
		<maven.compiler.enablePreview>true</maven.compiler.enablePreview>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>./source</sourceDirectory>
		<resources>
			<resource>
				<directory>source</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>--enable-preview</argument>
						<argument>-p</argument>
						<modulepath/>
						<argument>-m</argument>
						<argument>com.janilla.ide/com.janilla.ide.JanillaIde</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<name>Janilla IDE</name>
	<description></description>
	<url>https://github.com/diego-schivo/janilla-ide</url>
	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Diego Schivo</name>
			<email>diego.schivo@janilla.com</email>
			<organization>Janilla</organization>
			<organizationUrl>https://janilla.com</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/diego-schivo/janilla-ide.git</connection>
		<developerConnection>
			scm:git:ssh://git@github.com/diego-schivo/janilla-ide.git</developerConnection>
		<url>https://github.com/diego-schivo/janilla-ide</url>
		<tag>HEAD</tag>
	</scm>
</project>
